Homework/K8S/Files/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gohttpserver-service
  namespace: httpserver
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: httpserver
