Homework/K8S/Files/ingress-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/issuer: letsencrypt-prod
  name: gohttpserver-ingress-tls
  namespace: httpserver
spec:
  ingressClassName: "nginx"
  rules:
  - host: gohttpserver-tls.cloudnative-learn.com
    http:
      paths:
        - backend:
            service:
              name: gohttpserver-service
              port:
                number: 80
          path: /
          pathType: Prefix
  tls:
  - hosts:
      - gohttpserver-tls.cloudnative-learn.com
    secretName: httpserver-tls
