Homework/K8S/Files/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gohttpserver-ingress
  namespace: httpserver
spec:
  ingressClassName: "nginx"
  rules:
  - host: gohttpserver.cloudnative.test
    http:
      paths:
        - backend:
            service:
              name: gohttpserver-service
              port:
                number: 80
          path: /
          pathType: Prefix
